--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "iview": "^3.3.3",
+    "marked": "^0.6.1",
     "node-sass": "^4.11.0",
     "sass-loader": "^7.1.0",
     "svg-sprite-loader": "^4.1.3",
