--- a/package.json
+++ b/package.json
@@ -9,13 +9,17 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "highlight.js": "^9.15.6",
+    "highlightjs": "^9.12.0",
+    "highlightjs-line-numbers.js": "^2.7.0",
     "iview": "^3.3.3",
     "marked": "^0.6.1",
     "node-sass": "^4.11.0",
     "sass-loader": "^7.1.0",
     "svg-sprite-loader": "^4.1.3",
     "vue": "^2.5.17",
-    "vue-router": "^3.0.2"
+    "vue-router": "^3.0.2",
+    "vuex": "^3.1.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.1.1",
