--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "highlightjs": "^9.12.0",
     "highlightjs-line-numbers.js": "^2.7.0",
     "iview": "^3.3.3",
+    "lodash": "^4.17.11",
     "marked": "^0.6.1",
     "node-sass": "^4.11.0",
     "sass-loader": "^7.1.0",
