--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "compression-webpack-plugin": "^2.0.0",
     "highlight.js": "^9.15.6",
     "highlightjs": "^9.12.0",
     "highlightjs-line-numbers.js": "^2.7.0",
