--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "node-sass": "^4.11.0",
     "sass-loader": "^7.1.0",
     "svg-sprite-loader": "^4.1.3",
+    "v-viewer": "^1.4.1",
     "vue": "^2.5.17",
     "vue-router": "^3.0.2",
     "vuex": "^3.1.1"
