--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "svg-sprite-loader": "^4.1.3",
     "v-viewer": "^1.4.1",
     "vue": "^2.5.17",
+    "vue-disqus": "^3.0.5",
     "vue-router": "^3.0.2",
     "vuex": "^3.1.1"
   },
