--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "lodash": "^4.17.11",
     "marked": "^0.6.1",
     "node-sass": "^4.11.0",
+    "nprogress": "^0.2.0",
     "sass-loader": "^7.1.0",
     "svg-sprite-loader": "^4.1.3",
     "v-viewer": "^1.4.1",
