--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "blog",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -9,17 +9,13 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "clipboard": "^2.0.4",
     "compression-webpack-plugin": "^2.0.0",
-    "highlight.js": "^9.15.6",
-    "highlightjs": "^9.12.0",
-    "highlightjs-line-numbers.js": "^2.7.0",
     "iview": "^3.3.3",
-    "lodash": "^4.17.11",
+    "lodash-es": "^4.17.15",
     "marked": "^0.6.1",
-    "node-sass": "^4.11.0",
     "nprogress": "^0.2.0",
-    "sass-loader": "^7.1.0",
-    "svg-sprite-loader": "^4.1.3",
+    "prismjs": "^1.17.1",
     "v-viewer": "^1.4.1",
     "vue": "^2.5.17",
     "vue-disqus": "^3.0.5",
@@ -32,7 +28,11 @@
     "@vue/cli-service": "^3.1.1",
     "babel-eslint": "^10.0.1",
     "babel-plugin-import": "^1.12.0",
+    "babel-plugin-prismjs": "^1.1.1",
     "eslint": "^5.8.0",
+    "sass-loader": "^7.1.0",
+    "node-sass": "^4.11.0",
+    "svg-sprite-loader": "^4.1.3",
     "eslint-plugin-vue": "^5.0.0-0",
     "mini-css-extract-plugin": "^0.7.0",
     "postcss-loader": "^3.0.0",
